--- a/wp-content/themes/thegem-child/frontend.scss
+++ b/wp-content/themes/thegem-child/frontend.scss
@@ -499,3 +499,55 @@ a, .widget_recent_comments .comment-author-link a, .widget .team-person-email a:
         }
     }
 }
+#post-135{
+    .entry-content{
+        .wp-block-preformatted{
+            .woocommerce{
+                p{
+                    @extend .font ;
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+}
+.footer-our-brands{
+    background-color: #eaeaea;
+    padding-bottom: 32px;
+    .container{
+        .row{
+            @extend .title-group;
+            .title-group{
+                h1{
+                    &:before{
+                        background-color: white;
+                    }
+                    &:after{
+                        background-color: white;
+                    }
+
+                }
+                
+            }
+        }
+    }
+    .wpsisac-slick-carousal{
+        .slick-dots{
+            li button{
+                border: 1px solid #dab26d !important;
+            }
+            li.slick-active button{
+                background: #dab26d !important;
+            }
+        }
+    }
+    .wpsisac-slick-carousal.design-6 .slick-next {
+        display: none !important;
+    }
+    .wpsisac-slick-carousal.design-6 .slick-prev {
+        display: none !important;
+    }
+    .wpsisac-clearfix {
+        margin-top: -70px;
+    }
+}
